--- a/src/layout/profilePageTemplate/profilePageTemplate.pug
+++ b/src/layout/profilePageTemplate/profilePageTemplate.pug
@@ -45,7 +45,7 @@ html(lang="ru")
                                             .card__iconContainer
                                                 img(src=`${item.ico}`).card__icon.profileCard__icon
                                             .card__nameContainer
-                                                .card__title.profileCard__title
+                                                h2.card__title.profileCard__title
                                                     =item.profileName
                                         .card__content
                                             .card__info
@@ -122,4 +122,4 @@ html(lang="ru")
 
 
         footer
-            include ../footer/footer.pug
+            //include ../footer/footer.pug
