--- a/src/style.scss
+++ b/src/style.scss
@@ -98,7 +98,7 @@ $paragraph-black-05: rgba(44, 44, 44, 0.5);
         font-size: 18px;
         line-height: 22px;
     }
-    @media (max-width: 480px) {
+    @media (max-width: 650px) {
         font-size: 16px;
         line-height: 19px;
     }
@@ -121,7 +121,7 @@ $paragraph-black-05: rgba(44, 44, 44, 0.5);
         font-size: 16px;
         line-height: 19px;
     }
-    @media (max-width: 480px) {
+    @media (max-width: 650px) {
         font-size: 14px;
         line-height: 16px;
     }
@@ -167,7 +167,7 @@ $paragraph-black-05: rgba(44, 44, 44, 0.5);
 @mixin button {
     @include button-actions();
     display: block;
-    width: max-content;
+    max-width: max-content;
     cursor: pointer;
     background-color: $primary-color;
     color: white;
@@ -176,14 +176,18 @@ $paragraph-black-05: rgba(44, 44, 44, 0.5);
 @mixin cta-button {
     @include h3-bold();
     @include button();
-    padding: 20px 45px;
+    padding: 18px 40px;
     border-radius: 15px;
 
     @media (max-width: 650px) {
-        padding: 15px 35px;
+        padding: 15px 30px;
     }
 
     @media (max-width: 480px) {
         padding: 12px 25px;
+    }
+
+    @media (max-width: 320px) {
+        padding: 10px 17px;
     }
 }
