--- a/src/commonStyles.scss
+++ b/src/commonStyles.scss
@@ -18,7 +18,7 @@ body {
 .card__container {
     width: 100%;
     max-width: 1170px;
-    padding: 75px;
+    padding: 55px;
     margin: 0 auto 50px;
     background: white;
     border-radius: 15px;
@@ -42,7 +42,7 @@ body {
                 width: 80px;
             }
             & .profileCard__icon {
-                width: 160px;
+                width: 120px;
             }
         }
         & .card__nameContainer {
@@ -76,7 +76,7 @@ body {
         & .card__info {
 
             & .card__item {
-                margin-bottom: 50px;
+                margin-bottom: 30px;
 
                 &:last-child {
                     margin-bottom: 0;
@@ -84,7 +84,7 @@ body {
 
                 & .item__title {
                     @include h3-bold();
-                    margin-bottom: 25px;
+                    margin-bottom: 15px;
                 }
                 & .item__text {
                     @include paragraph-regular();
@@ -108,9 +108,6 @@ body {
                     }
                 }
             }
-            & .profileCard__item {
-                margin-bottom: 68px;
-            }
         }
 
 
@@ -120,7 +117,7 @@ body {
 
             & .profile__title {
                 @include h3-bold();
-                margin-bottom: 25px;
+                margin-bottom: 15px;
             }
 
             & .profile__container {
@@ -167,15 +164,17 @@ body {
             & .card__button {
                 @include cta-button;
                 cursor: pointer;
-                position: absolute;
-                left: 0;
-                bottom: 0;
-
             }
 
             & .card__button__hidden {
                 display: none;
             }
+        }
+        & .profileCard__profiles {
+            display: flex;
+            gap: 25px;
+            flex-direction: column;
+            justify-content: space-between;
         }
     }
 }
@@ -222,11 +221,6 @@ body {
         & .card__content {
             & .card__info {
                 & .card__item {
-                    margin-bottom: 30px;
-
-                    & .item__title {
-                        margin-bottom: 15px;
-                    }
 
                     & .card__exam {
                         margin-bottom: 10px;
@@ -235,15 +229,8 @@ body {
             }
 
             & .card__profiles {
-                & .profile__title {
-                    margin-bottom: 15px;
-                }
                 & .profile__container {
                     padding: 12px 17px;
-                }
-                & .card__button {
-                    margin-top: 25px;
-                    position: relative;
                 }
             }
         }
