added swiper at compare page when page is < 650px

--- a/src/compare/compare.pug
+++ b/src/compare/compare.pug
@@ -8,6 +8,7 @@ html(lang="ru")
         title Сравнение профилей
 
         script(src='../js/header/header.js', type='module')
+        link(rel="stylesheet" href="../swiper/swiper-bundle.min.css")
         link(rel="stylesheet" href="../commonStyles.scss")
         link(rel="stylesheet" href="./compare.scss")
         link(rel="stylesheet" href="../layout/header/header.scss")
@@ -26,4 +27,4 @@ html(lang="ru")
                     a(href='/').compare__link
                         | Перейти к выбору
         footer
-            include ../layout/footer/footer
+            //include ../layout/footer/footer
