added footer adaptive

--- a/src/compare/compare.pug
+++ b/src/compare/compare.pug
@@ -27,4 +27,4 @@ html(lang="ru")
                     a(href='/').compare__link
                         | Перейти к выбору
         footer
-            //include ../layout/footer/footer
+            include ../layout/footer/footer
