--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -4,22 +4,22 @@ div.footer__container
     .footer__inner
         a(href='https://www.mirea.ru/', target="_blank")
             img(src='/assets/images/mirea-logo.svg').footer__logo
-        .footer__section
+        .footer__section.footer__years
             .footer__title
                 | Статистика прошлых лет
             each obj in data.statistics
                 a(href=obj.link, target="_blank").footer__item
                     =obj.title
-        .footer__section
+        .footer__section.footer__social
             .footer__title
                 | МИРЭА в социальных сетях
             each obj in data.social_media
                 a(href=obj.link, target="_blank").footer__item
                     =obj.title
-        .footer__section
+        .footer__section.footer__chats
             .footer__title
                  | Чаты абитуриентов
-            .footer__chats
+            .footer__row
                  each obj in data.chats
                     a(href=obj.link, target="_blank").footer__item
                         case obj.title
