--- a/src/compare/compare.pug
+++ b/src/compare/compare.pug
@@ -24,7 +24,7 @@ html(lang="ru")
                 div.compare__empty
                     h2.compare__subtitle
                         | Для сравнения добавьте два профиля
-                    a(href='/').compare__link
+                    a(href='/').compare__emptyLink
                         | Перейти к выбору
         footer
             include ../layout/footer/footer
