--- a/src/compare/compare.scss
+++ b/src/compare/compare.scss
@@ -35,6 +35,7 @@
         align-items: flex-start;
     }
     & .compare__card {
+        box-shadow: 0 0 8px 1px #196bb114;
         background-color: white;
         padding: 35px;
         border-radius: 15px;
@@ -164,7 +165,10 @@
 
     }
     & .compare__emptyLink {
+        @include cta-button();
         @include h3-regular();
+        border: none;
+        color: white;
         margin: 0 auto;
     }
 
