--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -24,7 +24,7 @@ div.footer__container
                     a(href=obj.link, target="_blank").footer__item
                         case obj.title
                             when 'VK'
-                                include ../../../assets/icons/VK.svg
+                                include ../../../assets/icons/vk.svg
                             when 'Telegram'
                                 include ../../../assets/icons/telegram.svg
                             default
