--- a/src/layout/courses/courses.scss
+++ b/src/layout/courses/courses.scss
@@ -96,6 +96,7 @@
 
             & .result__container {
                 position: absolute;
+                z-index: 100;
                 left: 0;
                 right: 0;
                 top: 15px;
